tests/typing/fail/cycle.act
contract A

constructor()

creates
   uint x := 0
   B b := new B()

contract B

constructor()

creates
   uint y := 0
   A a := new A()

transition remote(uint z)

iff
   CALLVALUE == 0

updates
   a.x := z

transition multi(uint z)

iff
   CALLVALUE == 0

updates
   y := 1
   a.x := z
